--- a/03. Managing Social and Human Capital/Module 1 Motivation and Reward/1.1 Professor Cappelli and Professor Useem Introductions.md
+++ b/03. Managing Social and Human Capital/Module 1 Motivation and Reward/1.1 Professor Cappelli and Professor Useem Introductions.md
@@ -71,6 +71,11 @@
 
 引言：In this module, you'll learn how motivation affects an individual's performance and how to use that motivation to drive performance. You'll explore how incentive systems are designed and how psychological concepts such as behavior modification, imitation, conformity, and compliance influence and shape these systems. You’ll also examine the current process of hiring employees using technology, tracking systems, and outsourcing. And you’ll learn how you can provide valuable feedback to your employees, and make performance appraisals productive. By the end of this module, you’ll be able to apply what you've learned to best motivate, hire, and evaluate your employees.
 
+Learning Objectives:
+- Describe how motivation affects an individual's performance.
+- Explain how incentive systems are designed.
+- Assess current process of hiring employees using technology, tracking systems, and outsourcing.
+
 ### 第一章：Professor Introductions and Course Overview
 
 #### 视频小节1：Professor Cappelli and Professor Useem Introductions
