--- a/03. Managing Social and Human Capital/Module 1 Motivation and Reward/1.1 Professor Cappelli and Professor Useem Introductions.md
+++ b/03. Managing Social and Human Capital/Module 1 Motivation and Reward/1.1 Professor Cappelli and Professor Useem Introductions.md
@@ -1,8 +1,6 @@
-# Coursera 商业基础课程「管理社会与人力资本」
+## Coursera 商业基础课程《管理社会与人力资本》 - 模块1 - 动机与激励
 
-## 模块1 动机与激励
-
-### Cappelli 教授 和 Useem 教授介绍
+### 课程1.1 Cappelli 教授 和 Useem 教授介绍
 
 #### 1. 教授背景
 
@@ -10,16 +8,12 @@
 - 研究领域涵盖中国、印度企业管理实践，聚焦CEO领导力与组织管理。  
 - 长期关注企业如何通过有效管理实现员工激励与高绩效。
 
----
-
 #### 2. 课程历史渊源
 
 - 沃顿商学院是管理学科的起源地之一，课程理论体系融合了科学管理、人际关系学派及现代团队管理思想：  
   - **科学管理（泰勒主义）**：强调效率与理性激励（如Frederick Taylor在沃顿的贡献）。  
   - **人际关系学派（Elton Mayo）**：发现员工非完全理性，群体动态对绩效影响显著。
   - **现代管理思想**：引用Stanley McChrystal《团队中的团队》（团队协作）、Cheryl Sandberg《向前一步》（职场影响力）等案例。
-
----
 
 #### 3. 课程核心内容：动机与激励
 
@@ -43,9 +37,7 @@
 3.4 **关键挑战与策略**  
 
 - **员工不可预测性**：需动态调整管理策略，适应复杂人性与团队动态。  
-- **群体与技术互动**：通过优化团队协作模式与技术工具提升整体效能（如Tavistock研究所的“社会技术系统”理论）。
-
----
+- **群体与技术互动**：通过优化团队协作模式与技术工具提升整体效能（如Tavistock研究所的「社会技术系统」理论）。
 
 #### 4. 实践启示
 
@@ -59,7 +51,9 @@
 
 ---
 
-**总结**：本模块强调管理者需综合运用心理学、行为经济学与组织理论，设计科学的激励与评估系统，并通过技术工具与人性化管理平衡，实现员工潜能的最大化释放。
+#### 总结
+
+管理者需综合运用心理学、行为经济学与组织理论，设计科学的激励与评估系统，并通过技术工具与人性化管理平衡，实现员工潜能的最大化释放。
 
 ---
 
