--- a/03. Managing Social and Human Capital/Module 1 Motivation and Reward/1.2 Course Overview.md
+++ b/03. Managing Social and Human Capital/Module 1 Motivation and Reward/1.2 Course Overview.md
@@ -1,48 +1,49 @@
-### **Coursera《管理人力与社会资本》Week 1: 动机与奖励 总结与关键结论**
+## Coursera 商业基础课程《管理社会与人力资本》 - 模块1 - 动机与激励
 
----
+### 课程1.2 概览
 
-#### **课程核心目标**  
 通过分析激励系统、工作设计、决策机制与组织架构，帮助管理者**有效激发员工潜力、优化招聘与评估流程**，实现组织战略目标。
 
+#### 1. 人力资源管理的重要性
+
+- **成本与竞争优势**：劳动力成本占企业总成本的2/3，员工绩效是组织成败的关键差异化因素。  
+- **员工自主权**：员工的主观能动性（如责任心、创造力）直接影响组织成功，甚至能弥补其他领域的不足。  
+  - **案例对比**：沃尔玛（高流动率、低薪资）与好市多（高薪资、低流动率）的差异化策略，说明员工管理需与业务模式匹配。
+
+#### 2. 激励系统的设计原则
+
+- **超越金钱激励**：心理学研究表明，金钱并非唯一驱动力，**自主权、责任感、职业发展机会**等非货币因素同样重要。  
+- **动态调整**：激励系统需持续优化，避免「激励A目标却导致B行为」的副作用（如过度强调销量忽视质量）。  
+  - **启示**：结合「理性经济人」与「心理需求」模型设计混合激励方案（如绩效奖金+任务自主性）。
+
+#### 3. 工作设计的激励效应
+
+- **任务自主性**：赋予员工决策权（如货架补货权）可提升责任感与效率（如沃尔玛员工自主补货减少缺货损失）。  
+- **反馈与可见性**：明确任务成果与个人贡献的关联（如客户满意度与员工绩效挂钩），增强工作意义感。  
+  - **反例**：过度流程化（如层层审批补货申请）会扼杀灵活性与员工积极性。
+
+#### 4. 组织架构与文化的影响
+
+- **矩阵式管理**：平衡垂直职能（如财务汇报总部）与横向协作（如门店经理参与本地财务决策），避免「孤岛效应」。  
+- **文化的力量**：非正式规范（如团队协作习惯）可能比正式架构更持久，需通过文化塑造引导行为。  
+  -  **例证**：沃尔玛通过「总部目标+门店自主权」架构平衡标准化与灵活性。
+
+#### 5. 实践启示
+
+- **战略一致性**：员工管理策略（如薪酬、晋升）需与组织战略（如低成本或高端服务）紧密对齐。  
+- **灵活选择**：无单一「最佳实践」，需根据行业特性（如核电站严格流程 vs. 零售业灵活决策）选择适配方案。  
+- **持续迭代**：定期评估激励系统与工作设计，适应员工需求与市场变化。  
+- **文化培育**：通过价值观传递（如好市多「员工即资产」）强化组织凝聚力。
+
 ---
 
-### **关键内容提炼**
+#### 总结
 
-#### **1. 人力资源管理的重要性**  
-• **成本与竞争优势**：劳动力成本占企业总成本的2/3，员工绩效是组织成败的关键差异化因素。  
-• **员工自主权**：员工的主观能动性（如责任心、创造力）直接影响组织成功，甚至能弥补其他领域的不足。  
-  > **案例对比**：沃尔玛（高流动率、低薪资）与好市多（高薪资、低流动率）的差异化策略，说明员工管理需与业务模式匹配。
-
-#### **2. 激励系统的设计原则**  
-• **超越金钱激励**：心理学研究表明，金钱并非唯一驱动力，**自主权、责任感、职业发展机会**等非货币因素同样重要。  
-• **动态调整**：激励系统需持续优化，避免“激励A目标却导致B行为”的副作用（如过度强调销量忽视质量）。  
-  > **启示**：结合“理性经济人”与“心理需求”模型设计混合激励方案（如绩效奖金+任务自主性）。
-
-#### **3. 工作设计的激励效应**  
-• **任务自主性**：赋予员工决策权（如货架补货权）可提升责任感与效率（如沃尔玛员工自主补货减少缺货损失）。  
-• **反馈与可见性**：明确任务成果与个人贡献的关联（如客户满意度与员工绩效挂钩），增强工作意义感。  
-  > **反例**：过度流程化（如层层审批补货申请）会扼杀灵活性与员工积极性。
-
-#### **4. 组织架构与文化的影响**  
-• **矩阵式管理**：平衡垂直职能（如财务汇报总部）与横向协作（如门店经理参与本地财务决策），避免“孤岛效应”。  
-• **文化的力量**：非正式规范（如团队协作习惯）可能比正式架构更持久，需通过文化塑造引导行为。  
-  > **例证**：沃尔玛通过“总部目标+门店自主权”架构平衡标准化与灵活性。
+管理人力与社会资本的核心是**平衡理性激励与人性洞察**，通过科学设计（工作、薪酬、架构）与柔性管理（文化、授权）释放员工潜力，驱动组织可持续竞争力。
 
 ---
 
-### **实践启示**  
-1. **战略一致性**：员工管理策略（如薪酬、晋升）需与组织战略（如低成本或高端服务）紧密对齐。  
-2. **灵活选择**：无单一“最佳实践”，需根据行业特性（如核电站严格流程 vs. 零售业灵活决策）选择适配方案。  
-3. **持续迭代**：定期评估激励系统与工作设计，适应员工需求与市场变化。  
-4. **文化培育**：通过价值观传递（如好市多“员工即资产”）强化组织凝聚力。
-
----
-
-**总结**：管理人力与社会资本的核心是**平衡理性激励与人性洞察**，通过科学设计（工作、薪酬、架构）与柔性管理（文化、授权）释放员工潜力，驱动组织可持续竞争力。
-
-
-## Prompt
+### 附录：字幕
 
 下面提供 Coursera Business Foundations 系列课程的第三课 Managing Social and Human Capital 的视频 subtitle 及 slide，请用中文进行总结并提炼关键结论
 
