--- a/03. Managing Social and Human Capital/Module 1 Motivation and Reward/1.3 Introduction.md
+++ b/03. Managing Social and Human Capital/Module 1 Motivation and Reward/1.3 Introduction.md
@@ -1,56 +1,58 @@
-### **Coursera《管理人力与社会资本》Week 1: 动机与奖励（模块1）总结与关键结论**
+## Coursera 商业基础课程《管理社会与人力资本》 - 模块1 - 动机与激励
 
+### 课程1.3 人力资源管理简介
+
+聚焦于**人力资源管理中的法律与社会规范约束**，强调管理者需在合法性与公平性原则下设计激励、招聘与绩效管理体系，并适应全球化背景下的多元文化环境。
+
+#### 1. 人力资源管理的基本约束
+
+- **法律限制**：  
+  - **反歧视法规**：在多数国家（如美国、欧盟），禁止基于性别、种族、宗教、年龄（如美国40岁以上）等「受保护群体」的歧视性雇佣行为（招聘、薪酬、晋升、裁员等）。  
+  - **举证责任**：若雇佣决策对受保护群体产生负面影响（如裁员中女性比例过高），企业需证明决策基于客观标准（如绩效），而非主观偏见。  
+- **社会规范约束**：  
+  - **公平性原则**：公众对企业领导者的道德期待超越法律要求。即使不违法，不公平对待员工（如薪资不透明、晋升偏袒）仍会损害企业声誉与员工信任。
+
+#### 2. 全球环境下的管理挑战
+
+- **法律差异**：美国对雇主相对友好（管理自由度较高），但其他国家（如欧盟）对员工权利保护更严格（如工会权利、解雇限制）。  
+- **文化适应性**：管理实践需适应不同国家的法律框架与社会价值观（如集体主义文化中更强调员工福利与长期雇佣）。
+
+#### 3. 员工与供应商的本质区别
+
+- **权利差异**：员工享有法定权利（如工会谈判权、反歧视保护），而供应商关系以合同条款为主，管理者对员工的控制权受法律严格限制。  
+- **管理复杂性**：员工是「人」而非「生产要素」，需兼顾效率与人性化（如激励设计需平衡绩效目标与员工心理需求）。
+
+#### 4. 实践启示
+
+- **合规优先**：  
+  - 建立标准化招聘与绩效评估流程（如结构化面试、量化绩效指标），确保决策可追溯且符合反歧视法规。  
+  - 定期进行法律合规培训，避免隐性偏见（如无意识的年龄或性别偏好）。  
+
+- **公平透明**：  
+  - 薪酬与晋升政策需公开透明（如薪酬带宽制度、晋升标准公示），减少员工对不公平的感知。  
+  - 通过匿名反馈机制（如员工满意度调查）监控组织内部公平性。  
+
+- **全球化管理策略**：  
+  - 在跨国运营中，采用「核心原则统一+本地化适配」模式（如全球绩效标准结合地区福利政策）。  
+  - 关注当地工会力量与社会舆论（如欧洲国家需提前协商重大裁员决策）。  
+
+- **人性化设计**：  
+  - 避免将员工视为「可替换资源」，通过职业发展计划（如轮岗、培训）增强归属感。  
+  - 在合法框架内赋予员工自主权（如弹性工作制），提升内在动机。
+  
 ---
 
-#### **核心主题**  
-本模块聚焦于**人力资源管理中的法律与社会规范约束**，强调管理者需在合法性与公平性原则下设计激励、招聘与绩效管理体系，并适应全球化背景下的多元文化环境。
+#### 总结
 
----
-
-### **关键内容提炼**
-
-#### **1. 人力资源管理的基本约束**  
-• **法律限制**：  
-  • **反歧视法规**：在多数国家（如美国、欧盟），禁止基于性别、种族、宗教、年龄（如美国40岁以上）等“受保护群体”的歧视性雇佣行为（招聘、薪酬、晋升、裁员等）。  
-  • **举证责任**：若雇佣决策对受保护群体产生负面影响（如裁员中女性比例过高），企业需证明决策基于客观标准（如绩效），而非主观偏见。  
-• **社会规范约束**：  
-  • **公平性原则**：公众对企业领导者的道德期待超越法律要求。即使不违法，不公平对待员工（如薪资不透明、晋升偏袒）仍会损害企业声誉与员工信任。
-
-#### **2. 全球环境下的管理挑战**  
-• **法律差异**：美国对雇主相对友好（管理自由度较高），但其他国家（如欧盟）对员工权利保护更严格（如工会权利、解雇限制）。  
-• **文化适应性**：管理实践需适应不同国家的法律框架与社会价值观（如集体主义文化中更强调员工福利与长期雇佣）。
-
-#### **3. 员工与供应商的本质区别**  
-• **权利差异**：员工享有法定权利（如工会谈判权、反歧视保护），而供应商关系以合同条款为主，管理者对员工的控制权受法律严格限制。  
-• **管理复杂性**：员工是“人”而非“生产要素”，需兼顾效率与人性化（如激励设计需平衡绩效目标与员工心理需求）。
-
----
-
-### **实践启示**  
-1. **合规优先**：  
-   • 建立标准化招聘与绩效评估流程（如结构化面试、量化绩效指标），确保决策可追溯且符合反歧视法规。  
-   • 定期进行法律合规培训，避免隐性偏见（如无意识的年龄或性别偏好）。  
-
-2. **公平透明**：  
-   • 薪酬与晋升政策需公开透明（如薪酬带宽制度、晋升标准公示），减少员工对不公平的感知。  
-   • 通过匿名反馈机制（如员工满意度调查）监控组织内部公平性。  
-
-3. **全球化管理策略**：  
-   • 在跨国运营中，采用“核心原则统一+本地化适配”模式（如全球绩效标准结合地区福利政策）。  
-   • 关注当地工会力量与社会舆论（如欧洲国家需提前协商重大裁员决策）。  
-
-4. **人性化设计**：  
-   • 避免将员工视为“可替换资源”，通过职业发展计划（如轮岗、培训）增强归属感。  
-   • 在合法框架内赋予员工自主权（如弹性工作制），提升内在动机。  
-
----
-
-### **总结**  
 人力资源管理需在**法律底线、社会公平与组织效率**间取得平衡。管理者应：  
-• **规避法律风险**：通过标准化流程与客观指标降低歧视争议。  
-• **塑造公平文化**：以透明化与员工参与增强信任。  
-• **灵活适应环境**：全球化背景下兼顾统一性与本地化需求。  
-• **以人为本**：超越“工具化”思维，通过权利尊重与机会赋予激发员工潜能。
+- **规避法律风险**：通过标准化流程与客观指标降低歧视争议。  
+- **塑造公平文化**：以透明化与员工参与增强信任。  
+- **灵活适应环境**：全球化背景下兼顾统一性与本地化需求。  
+- **以人为本**：超越「工具化」思维，通过权利尊重与机会赋予激发员工潜能。
+
+---
+
+### 附录：字幕
 
 下面提供 Coursera Business Foundations 系列课程的第三课 Managing Social and Human Capital 的视频 subtitle 及 slide，请用中文进行总结并提炼关键结论
 
