--- a/03. Managing Social and Human Capital/Module 1 Motivation and Reward/1.4 Motivation.md
+++ b/03. Managing Social and Human Capital/Module 1 Motivation and Reward/1.4 Motivation.md
@@ -1,78 +1,73 @@
-### **Coursera《管理人力与社会资本》Week 1: 动机与奖励（模块1-动机篇）总结与关键结论**
+## Coursera 商业基础课程《管理社会与人力资本》 - 模块1 - 动机与激励
+
+### 课程1.4 动机
+
+探讨**员工激励的核心矛盾**：如何在「监督控制」与「自主信任」间平衡，并通过经济学模型（代理理论、效率工资、锦标赛理论）解析激励设计的有效性及局限性。
+
+
+#### 1. 传统监督机制的困境 
+
+- **案例：新奥尔良餐厅的现金管理**  
+  - 停电时，餐厅用人工计算账单并派专人监督收银员，但需额外人员监督监督者，形成「无限监督链」。  
+- **问题本质**：单纯依靠监督成本高、效率低，且无法解决信任缺失（如员工偷窃风险）。  
+- **启示**：过度监督削弱员工责任感，需通过激励设计替代「人盯人」模式。  
+
+#### 2. 经济学激励模型与局限性  
+
+- **代理理论（Agency Model）**：  
+  - **假设**：员工（代理人）与雇主（委托人）利益不一致，需通过契约（如绩效奖金）绑定双方目标。  
+  - **失败案例**：软件工程师以项目进度要挟加薪，暴露「纯金钱激励」的脆弱性（员工缺乏组织忠诚）。  
+  - **结论**：仅靠金钱无法解决深层动机问题（如承诺感、使命感）。  
+- **效率工资（Efficiency Wages）**：  
+  - **逻辑**：支付高于市场水平的薪资以：  
+    -  吸引更优秀人才；  
+    -  降低离职率（员工不愿失去高薪岗位）；  
+    -  减少偷懒行为（员工珍惜高价值工作）。  
+  - **证据支持**：高薪企业员工纪律问题更少。  
+  - **风险**：若竞争对手同步加薪，优势消失（依赖相对薪资水平）。  
+- **锦标赛理论（Tournament Theory）**：  
+  - **模式**：通过晋升和层级薪资差异激励竞争（如CEO薪资远高于高管团队）。  
+  - **优点**：低成本激励多数人参与「晋升竞赛」。  
+  - **缺点**：
+    - 破坏团队合作（员工为晋升相互竞争而非协作）； 
+    - 逆向选择（优秀员工避开「强竞争环境」）。  
+
+#### 3. 信任与自主权的新型激励
+
+- **案例对比**：  
+  - **传统企业**：依赖摄像头、监督员监控员工。  
+  - **创新型公司（如Google、3M）**：赋予员工自主时间（如每周10小时自由探索项目），通过信任激发创造力。  
+- **关键条件**：  
+  - **文化匹配**：员工需认同企业使命（如Google的「创新驱动」文化）。  
+  - **筛选机制**：招聘阶段选择高度自驱、价值观契合的人才。  
+
+#### 4. 实践启示
+
+- **混合激励设计**：  
+  - **金钱激励**：确保薪资具备竞争力（效率工资原则），但避免「唯金钱论」。  
+  - **非金钱激励**：赋予任务自主权（如项目选择权）、职业发展机会（如晋升透明化）。  
+- **信任与监督平衡**：  
+  - **高风险岗位**（如财务）：适度监督（如轮岗、审计）结合绩效奖励。  
+  - **知识型工作**（如研发）：减少流程管控，通过目标管理（OKR）替代过程监控。  
+- **规避锦标赛副作用**：  
+  - **团队协作场景**：弱化个体竞争，强化团队绩效奖励（如项目奖金共享）。  
+  - **晋升机制**：明确多维评估标准（如协作能力、创新贡献），避免单一结果导向。  
+- **文化塑造**：  
+  - 通过使命陈述（如「用户第一」）和内部沟通（如全员会议）增强员工归属感。  
+  - 鼓励「主人翁精神」（如员工持股计划），将个人利益与组织长期目标绑定。  
 
 ---
 
-#### **核心主题**  
-探讨**员工激励的核心矛盾**：如何在“监督控制”与“自主信任”间平衡，并通过经济学模型（代理理论、效率工资、锦标赛理论）解析激励设计的有效性及局限性。
+#### 总结
+
+员工激励需**跳出「监督-控制」或「金钱-契约」的二元对立**，转向**系统性设计**：  
+- **短期**：利用效率工资吸引人才，通过清晰目标（如KPI）降低代理成本。  
+- **长期**：培育信任文化，赋予自主权，将员工从「经济代理人」转化为「使命合伙人」。  
+- **动态调整**：根据业务性质（如标准化生产 vs 创新研发）选择适配模型，定期评估激励效果。
 
 ---
 
-### **关键内容提炼**
-
-#### **1. 传统监督机制的困境**  
-• **案例：新奥尔良餐厅的现金管理**  
-  停电时，餐厅用人工计算账单并派专人监督收银员，但需额外人员监督监督者，形成“无限监督链”。  
-  • **问题本质**：单纯依靠监督成本高、效率低，且无法解决信任缺失（如员工偷窃风险）。  
-  • **启示**：过度监督削弱员工责任感，需通过激励设计替代“人盯人”模式。  
-
-#### **2. 经济学激励模型与局限性**  
-• **代理理论（Agency Model）**：  
-  • **假设**：员工（代理人）与雇主（委托人）利益不一致，需通过契约（如绩效奖金）绑定双方目标。  
-  • **失败案例**：软件工程师以项目进度要挟加薪，暴露“纯金钱激励”的脆弱性（员工缺乏组织忠诚）。  
-  • **结论**：仅靠金钱无法解决深层动机问题（如承诺感、使命感）。  
-
-• **效率工资（Efficiency Wages）**：  
-  • **逻辑**：支付高于市场水平的薪资以：  
-    1. 吸引更优秀人才；  
-    2. 降低离职率（员工不愿失去高薪岗位）；  
-    3. 减少偷懒行为（员工珍惜高价值工作）。  
-  • **证据支持**：高薪企业员工纪律问题更少。  
-  • **风险**：若竞争对手同步加薪，优势消失（依赖相对薪资水平）。  
-
-• **锦标赛理论（Tournament Theory）**：  
-  • **模式**：通过晋升和层级薪资差异激励竞争（如CEO薪资远高于高管团队）。  
-  • **优点**：低成本激励多数人参与“晋升竞赛”。  
-  • **缺点**：  
-    1. 破坏团队合作（员工为晋升相互竞争而非协作）；  
-    2. 逆向选择（优秀员工避开“强竞争环境”）。  
-
-#### **3. 信任与自主权的新型激励**  
-• **案例对比**：  
-  • **传统企业**：依赖摄像头、监督员监控员工。  
-  • **创新型公司（如Google、3M）**：赋予员工自主时间（如每周10小时自由探索项目），通过信任激发创造力。  
-• **关键条件**：  
-  • **文化匹配**：员工需认同企业使命（如Google的“创新驱动”文化）。  
-  • **筛选机制**：招聘阶段选择高度自驱、价值观契合的人才。  
-
----
-
-### **实践启示**  
-1. **混合激励设计**：  
-   • **金钱激励**：确保薪资具备竞争力（效率工资原则），但避免“唯金钱论”。  
-   • **非金钱激励**：赋予任务自主权（如项目选择权）、职业发展机会（如晋升透明化）。  
-
-2. **信任与监督平衡**：  
-   • **高风险岗位**（如财务）：适度监督（如轮岗、审计）结合绩效奖励。  
-   • **知识型工作**（如研发）：减少流程管控，通过目标管理（OKR）替代过程监控。  
-
-3. **规避锦标赛副作用**：  
-   • **团队协作场景**：弱化个体竞争，强化团队绩效奖励（如项目奖金共享）。  
-   • **晋升机制**：明确多维评估标准（如协作能力、创新贡献），避免单一结果导向。  
-
-4. **文化塑造**：  
-   • 通过使命陈述（如“用户第一”）和内部沟通（如全员会议）增强员工归属感。  
-   • 鼓励“主人翁精神”（如员工持股计划），将个人利益与组织长期目标绑定。  
-
----
-
-### **总结**  
-员工激励需**跳出“监督-控制”或“金钱-契约”的二元对立**，转向**系统性设计**：  
-• **短期**：利用效率工资吸引人才，通过清晰目标（如KPI）降低代理成本。  
-• **长期**：培育信任文化，赋予自主权，将员工从“经济代理人”转化为“使命合伙人”。  
-• **动态调整**：根据业务性质（如标准化生产 vs 创新研发）选择适配模型，定期评估激励效果。
-
-
-## Prompt
+### 附录：字幕
 
 下面提供 Coursera Business Foundations 系列课程的第三课 Managing Social and Human Capital 的视频 subtitle 及 slide，请用中文进行总结并提炼关键结论
 
