--- a/03. Managing Social and Human Capital/Module 1 Motivation and Reward/1.5 Motivation: The Agency Theory Examples.md
+++ b/03. Managing Social and Human Capital/Module 1 Motivation and Reward/1.5 Motivation: The Agency Theory Examples.md
@@ -1,56 +1,56 @@
-### **Coursera《管理人力与社会资本》Week 1: 动机与奖励（模块1-代理理论案例）总结与关键结论**
+## Coursera 商业基础课程《管理社会与人力资本》 - 模块1 - 动机与激励
 
----
+### 课程1.5 动机：代理理论案例
 
-#### **核心主题**  
 通过历史与当代案例揭示**激励设计错位**（Rewarding A While Hoping for B）的严重后果，强调**目标与激励一致性**在管理中的核心地位。
 
+#### 1. 代理理论的核心矛盾
+ 
+- **利益冲突**：委托人（雇主）与代理人（员工）目标不一致，激励设计若仅关注短期或表面行为，可能引发系统性风险。  
+- **案例1：澳大利亚囚犯运输（18世纪）**  
+  - **初始激励**：按上船囚犯人数支付船主报酬 → 船主克扣生存物资，囚犯死亡率超50%。  
+  - **调整后激励**：按存活抵澳人数支付 → 死亡率降至2%。  
+  - **启示**：激励需直接绑定最终目标（存活率），而非中间行为（运输人数）。  
+- **案例2：苏联和平号空间站事故**  
+  - **错误激励**：宇航员奖金与「服从指令」挂钩，而非任务成功 → 被迫执行高风险手动对接（无自动导航设备），险些导致空间站损毁。  
+  - **启示**：过度强调「过程合规」可能牺牲长期安全与战略目标。
+
+#### 2. 激励错位的典型后果
+
+- **短视行为**：员工优先完成激励指标（如运输量、指令执行），忽视隐性风险（如生命安全、任务可持续性）。  
+- **道德风险**：代理人利用规则漏洞谋利（如船主通过牺牲囚犯降低成本）。  
+- **目标偏离**：组织资源被导向「虚假成功」（如完成运输但损失人力资本）。
+
+#### 3. 激励设计的关键原则 
+
+- **结果导向**：激励需直接关联终极目标（如存活率、任务安全），避免中间指标异化（如运输量、指令执行次数）。  
+- **动态校准**：定期评估激励系统副作用（如NASA通过「匿名安全报告」机制避免惩罚性追责）。  
+- **平衡过程与结果**：  
+  - **高风险领域**（如航天、医疗）：激励需兼顾安全流程与结果（如「零事故奖金+合规奖励」）。  
+  - **创新领域**（如研发）：允许试错（如谷歌「20%自由时间」），但设定阶段性成果里程碑。
+
+#### 4. 现代管理启示 
+
+- **避免单一指标**：  
+  - 使用复合指标（如客户满意度+销售额）替代单一KPI（如销量）。  
+  - 案例：Salesforce将员工绩效与客户留存率、产品创新贡献多维绑定。  
+- **信任与透明**：  
+  - 减少「监督依赖」，通过文化塑造（如NASA「安全第一」文化）替代强制合规。  
+  - 案例：Netflix取消报销流程审批，依靠员工自主决策+事后抽查。  
+- **长期视角**：  
+  - 股权激励、职业发展通道（如内部晋升优先）替代短期现金奖励。  
+
 ---
 
-### **关键内容提炼**
+#### 总结
 
-#### **1. 代理理论的核心矛盾**  
-• **利益冲突**：委托人（雇主）与代理人（员工）目标不一致，激励设计若仅关注短期或表面行为，可能引发系统性风险。  
-• **案例1：澳大利亚囚犯运输（18世纪）**  
-  • **初始激励**：按上船囚犯人数支付船主报酬 → 船主克扣生存物资，囚犯死亡率超50%。  
-  • **调整后激励**：按存活抵澳人数支付 → 死亡率降至2%。  
-  • **启示**：激励需直接绑定最终目标（存活率），而非中间行为（运输人数）。  
-
-• **案例2：苏联和平号空间站事故**  
-  • **错误激励**：宇航员奖金与“服从指令”挂钩，而非任务成功 → 被迫执行高风险手动对接（无自动导航设备），险些导致空间站损毁。  
-  • **启示**：过度强调“过程合规”可能牺牲长期安全与战略目标。
-
-#### **2. 激励错位的典型后果**  
-• **短视行为**：员工优先完成激励指标（如运输量、指令执行），忽视隐性风险（如生命安全、任务可持续性）。  
-• **道德风险**：代理人利用规则漏洞谋利（如船主通过牺牲囚犯降低成本）。  
-• **目标偏离**：组织资源被导向“虚假成功”（如完成运输但损失人力资本）。
-
-#### **3. 激励设计的关键原则**  
-• **结果导向**：激励需直接关联终极目标（如存活率、任务安全），避免中间指标异化（如运输量、指令执行次数）。  
-• **动态校准**：定期评估激励系统副作用（如NASA通过“匿名安全报告”机制避免惩罚性追责）。  
-• **平衡过程与结果**：  
-  • **高风险领域**（如航天、医疗）：激励需兼顾安全流程与结果（如“零事故奖金+合规奖励”）。  
-  • **创新领域**（如研发）：允许试错（如谷歌“20%自由时间”），但设定阶段性成果里程碑。
-
-#### **4. 现代管理启示**  
-• **避免单一指标**：  
-  • 使用复合指标（如客户满意度+销售额）替代单一KPI（如销量）。  
-  • 案例：Salesforce将员工绩效与客户留存率、产品创新贡献多维绑定。  
-• **信任与透明**：  
-  • 减少“监督依赖”，通过文化塑造（如NASA“安全第一”文化）替代强制合规。  
-  • 案例：Netflix取消报销流程审批，依靠员工自主决策+事后抽查。  
-• **长期视角**：  
-  • 股权激励、职业发展通道（如内部晋升优先）替代短期现金奖励。  
+- **激励是双刃剑**：设计不当将引发「目标腐蚀」，需以终为始定义成功标准。  
+- **系统性思维**：将激励嵌入组织战略（如安全、创新），而非孤立设计奖惩规则。  
+- **人性化平衡**：通过信任文化（如自主权）对冲代理风险，降低「监管成本」。
 
 ---
 
-### **总结**  
-• **激励是双刃剑**：设计不当将引发“目标腐蚀”，需以终为始定义成功标准。  
-• **系统性思维**：将激励嵌入组织战略（如安全、创新），而非孤立设计奖惩规则。  
-• **人性化平衡**：通过信任文化（如自主权）对冲代理风险，降低“监管成本”。
-
-
-## Prompt
+### 附录：字幕
 
 下面提供 Coursera Business Foundations 系列课程的第三课 Managing Social and Human Capital 的视频 subtitle 及 slide，请用中文进行总结并提炼关键结论
 
