--- a/03. Managing Social and Human Capital/Module 1 Motivation and Reward/1.6 Designing Incentive Systems.md
+++ b/03. Managing Social and Human Capital/Module 1 Motivation and Reward/1.6 Designing Incentive Systems.md
@@ -1,82 +1,80 @@
-### **Coursera《管理人力与社会资本》Week 1: 动机与奖励（模块1-激励系统设计）总结与关键结论**
+## Coursera 商业基础课程《管理社会与人力资本》 - 模块1 - 动机与激励
 
----
+### 课程1.6 激励系统设计
 
-#### **核心主题**  
 探讨**激励系统的复杂性与多维度设计**，结合经济学与心理学理论，揭示如何通过科学模型（如期望理论、从众效应、认知失调）优化员工行为，避免激励错位与短期主义。
 
----
+#### 1. 激励系统的核心矛盾
 
-### **关键内容提炼**
+- **可控性与目标错位**：  
+  - **员工视角**：激励需绑定个人可控的成果（如销售指标），但过度聚焦单一指标（如销量）可能导致牺牲企业长期利益（如低价倾销损害利润）。  
+  - **组织视角**：高管激励（如股票期权）易引发短期行为（如财务造假、削减研发投入），因高管对股价影响有限且任期有限。  
+  - **案例**：销售员为完成指标降价促销 → 销量达标但利润率下降 → 企业整体利润受损。  
 
-#### **1. 激励系统的核心矛盾**  
-• **可控性与目标错位**：  
-  • **员工视角**：激励需绑定个人可控的成果（如销售指标），但过度聚焦单一指标（如销量）可能导致牺牲企业长期利益（如低价倾销损害利润）。  
-  • **组织视角**：高管激励（如股票期权）易引发短期行为（如财务造假、削减研发投入），因高管对股价影响有限且任期有限。  
-  • **案例**：销售员为完成指标降价促销 → 销量达标但利润率下降 → 企业整体利润受损。  
+#### 2. 经济学激励模型的局限性  
 
-#### **2. 经济学激励模型的局限性**  
-• **代理理论（Agency Theory）**：  
-  • **假设缺陷**：仅通过契约绑定利益（如绩效奖金）无法解决员工内在动机（如使命感）缺失问题。  
-  • **案例**：高管为短期股价上涨削减长期投资 → 激励设计未平衡“股东回报”与“可持续发展”。  
-• **效率工资与锦标赛理论**：  
-  • **适用边界**：适用于可量化、独立性强的工作（如销售竞赛），但破坏团队协作（如研发部门竞争导致信息封锁）。  
+- **代理理论（Agency Theory）**：  
+  - **假设缺陷**：仅通过契约绑定利益（如绩效奖金）无法解决员工内在动机（如使命感）缺失问题。  
+  - **案例**：高管为短期股价上涨削减长期投资 → 激励设计未平衡「股东回报」与「可持续发展」。  
+- **效率工资与锦标赛理论**：  
+  - **适用边界**：适用于可量化、独立性强的工作（如销售竞赛），但破坏团队协作（如研发部门竞争导致信息封锁）。  
 
-#### **3. 心理学驱动的激励模型**  
-• **期望理论（Expectancy Theory）**：  
-  • **核心**：员工需明确感知“努力→绩效→奖励”的可靠链条。若信任缺失（如企业频繁变更奖金规则），激励失效。  
-  • **应用**：设定透明、稳定的奖励机制（如季度奖金公开计算公式）。  
-• **路径-目标理论（Path-Goal Theory）**：  
-  • **核心**：员工需具备达成目标的技能与资源，否则激励无效。  
-  • **案例**：程序员若无算法培训，高额奖金无法驱动其完成复杂任务。  
-• **行为矫正（Behavior Modification）**：  
-  • **随机奖励效应**：不定期发放即时奖励（如“现场红包”）比固定奖金更有效，因触发潜意识行为强化（如实验中的鸽子随机投食实验）。  
-  • **应用**：零售业店长随机表彰优秀服务行为，强化员工自发积极性。  
+#### 3. 心理学驱动的激励模型  
 
-#### **4. 社会心理学与群体效应**  
-• **从众（Conformity）**：  
-  • **电梯实验启示**：新员工易模仿团队主流行为。将低绩效者与高绩效团队共事，可自然提升其表现（如亚马逊“影子计划”）。  
-• **模仿（Imitation）**：  
-  • **角色模型力量**：员工模仿权威或魅力领导者（如乔布斯对苹果工程师的影响）。需警惕负面模仿（如高管违规行为被效仿）。  
-• **服从（Compliance）**：  
-  • **权威效应**：员工易盲从权威指令（如米尔格拉姆电击实验）。需确保管理者指令符合伦理（如微软取消“stack ranking”强制排名制度）。  
+- **期望理论（Expectancy Theory）**：  
+  - **核心**：员工需明确感知「努力→绩效→奖励」的可靠链条。若信任缺失（如企业频繁变更奖金规则），激励失效。  
+  - **应用**：设定透明、稳定的奖励机制（如季度奖金公开计算公式）。  
+- **路径-目标理论（Path-Goal Theory）**：  
+  - **核心**：员工需具备达成目标的技能与资源，否则激励无效。  
+  - **案例**：程序员若无算法培训，高额奖金无法驱动其完成复杂任务。  
+- **行为矫正（Behavior Modification）**：  
+  - **随机奖励效应**：不定期发放即时奖励（如「现场红包」）比固定奖金更有效，因触发潜意识行为强化（如实验中的鸽子随机投食实验）。  
+  - **应用**：零售业店长随机表彰优秀服务行为，强化员工自发积极性。  
 
-#### **5. 认知失调与自我驱动**  
-• **目标设定理论**：  
-  • **公开承诺**：员工公开承诺目标（如戒烟誓言）后，因认知失调（“自我形象”与“行为”冲突）更易坚持。  
-  • **应用**：OKR（目标与关键成果）公开化，增强责任感。  
-• **毕马龙效应（Pygmalion Effect）**：  
-  • **高期待驱动高表现**：管理者传递高期望可提升员工自信与绩效（如教师对学生“潜力标签”的影响）。  
-• **公平理论（Equity Theory）**：  
-  • **感知公平**：员工不满薪资不公时会消极抵抗（如减少工作量）。需确保薪酬透明与内部公平（如Buffer公司公开全员薪资）。  
+#### 4. 社会心理学与群体效应  
 
----
+- **从众（Conformity）**：  
+  - **电梯实验启示**：新员工易模仿团队主流行为。将低绩效者与高绩效团队共事，可自然提升其表现（如亚马逊「影子计划」）。  
+- **模仿（Imitation）**：  
+  - **角色模型力量**：员工模仿权威或魅力领导者（如乔布斯对苹果工程师的影响）。需警惕负面模仿（如高管违规行为被效仿）。  
+- **服从（Compliance）**：  
+  - **权威效应**：员工易盲从权威指令（如米尔格拉姆电击实验）。需确保管理者指令符合伦理（如微软取消「stack ranking」强制排名制度）。  
 
-### **实践启示**  
-1. **混合激励设计**：  
-   • **基层员工**：以可控短期目标为主（如销售提成），辅以随机即时奖励（如客户好评奖金）。  
-   • **高管层**：绑定长期股权（如5年解锁期）+ ESG（环境、社会、治理）绩效指标，平衡短期与长期利益。  
+#### 5. 认知失调与自我驱动  
 
-2. **文化塑造优于规则管控**：  
-   • 通过高绩效团队氛围（从众效应）和榜样领导（模仿效应）替代复杂监管制度。  
-   • 案例：Zappos取消职位等级，以“文化契合度”作为晋升核心标准。  
+- **目标设定理论**：  
+  - **公开承诺**：员工公开承诺目标（如戒烟誓言）后，因认知失调（「自我形象」与「行为」冲突）更易坚持。  
+  - **应用**：OKR（目标与关键成果）公开化，增强责任感。  
+- **毕马龙效应（Pygmalion Effect）**：  
+  - **高期待驱动高表现**：管理者传递高期望可提升员工自信与绩效（如教师对学生「潜力标签」的影响）。  
+- **公平理论（Equity Theory）**：  
+  - **感知公平**：员工不满薪资不公时会消极抵抗（如减少工作量）。需确保薪酬透明与内部公平（如Buffer公司公开全员薪资）。  
 
-3. **技能与激励同步**：  
-   • 提供培训资源（路径-目标理论）确保员工有能力达成激励目标（如谷歌“20%自由时间”配套创新方法论课程）。  
+#### 6. 实践启示  
 
-4. **透明与信任机制**：  
-   • 定期沟通激励规则（期望理论），避免政策频繁变动削弱信任。  
-   • 案例：Patagonia公开可持续发展目标进展，增强员工使命感。  
+- **混合激励设计**：  
+  - **基层员工**：以可控短期目标为主（如销售提成），辅以随机即时奖励（如客户好评奖金）。  
+  - **高管层**：绑定长期股权（如5年解锁期）+ ESG（环境、社会、治理）绩效指标，平衡短期与长期利益。  
+- **文化塑造优于规则管控**：  
+  - 通过高绩效团队氛围（从众效应）和榜样领导（模仿效应）替代复杂监管制度。  
+  - 案例：Zappos取消职位等级，以「文化契合度」作为晋升核心标准。  
+- **技能与激励同步**：  
+  - 提供培训资源（路径-目标理论）确保员工有能力达成激励目标（如谷歌「20%自由时间」配套创新方法论课程）。  
+- **透明与信任机制**：  
+  - 定期沟通激励规则（期望理论），避免政策频繁变动削弱信任。  
+  - 案例：Patagonia公开可持续发展目标进展，增强员工使命感。  
 
 ---
 
-### **总结**  
-• **激励是系统工程**：需融合经济学目标绑定与心理学行为洞察，兼顾可控性、公平性、长期性。  
-• **人性化设计**：超越“控制-奖励”思维，通过文化、信任、技能赋能激发内在动机。  
-• **动态校准**：定期评估激励副作用（如短视行为），灵活调整以适应组织战略与外部环境变化。
+#### 总结
 
+- **激励是系统工程**：需融合经济学目标绑定与心理学行为洞察，兼顾可控性、公平性、长期性。  
+- **人性化设计**：超越「控制-奖励」思维，通过文化、信任、技能赋能激发内在动机。  
+- **动态校准**：定期评估激励副作用（如短视行为），灵活调整以适应组织战略与外部环境变化。
 
-## Prompt
+---
+
+### 附录：字幕
 
 下面提供 Coursera Business Foundations 系列课程的第三课 Managing Social and Human Capital 的视频 subtitle 及 slide，请用中文进行总结并提炼关键结论
 
