--- a/03. Managing Social and Human Capital/Module 1 Motivation and Reward/1.7 Hiring.md
+++ b/03. Managing Social and Human Capital/Module 1 Motivation and Reward/1.7 Hiring.md
@@ -1,78 +1,71 @@
-### **Coursera《管理人力与社会资本》Week 1: 动机与奖励（模块1-招聘篇）总结与关键结论**
+## Coursera 商业基础课程《管理社会与人力资本》 - 模块1 - 动机与激励
 
----
+### 课程1.7 招聘
 
-#### **核心主题**  
 现代招聘的核心挑战在于**平衡招募与选拔的优先级**，利用技术与数据优化流程，同时避免组织文化同质化，促进多样性。
 
----
+#### 1. 招聘的两大阶段：招募（Recruitment）与选拔（Selection）  
 
-### **关键内容提炼**
+- **招募的重要性被低估**：  
+  - **误区**：企业过度关注选拔（筛选候选人），却忽视招募（吸引合适人才池）。  
+  - **关键点**：若申请人池缺乏合适人选（如技能或文化不匹配），再精密的选拔也无意义。  
+  - **案例**：初创公司因未清晰描述「高强度创业文化」，导致新员工入职后迅速离职。  
+- **精准职位描述的价值**：  
+  - **员工价值主张（EVP）**：需真实呈现职位优缺点（如「高压力但高成长」），过滤不匹配者，降低后续离职风险。  
+  - **工具**：实习项目双向筛选（企业考察候选人，候选人体验真实工作环境）。  
 
-#### **1. 招聘的两大阶段：招募（Recruitment）与选拔（Selection）**  
-• **招募的重要性被低估**：  
-  • **误区**：企业过度关注选拔（筛选候选人），却忽视招募（吸引合适人才池）。  
-  • **关键点**：若申请人池缺乏合适人选（如技能或文化不匹配），再精密的选拔也无意义。  
-  • **案例**：初创公司因未清晰描述“高强度创业文化”，导致新员工入职后迅速离职。  
+#### 2. 选拔的科学性与局限性  
 
-• **精准职位描述的价值**：  
-  • **员工价值主张（EVP）**：需真实呈现职位优缺点（如“高压力但高成长”），过滤不匹配者，降低后续离职风险。  
-  • **工具**：实习项目双向筛选（企业考察候选人，候选人体验真实工作环境）。  
+- **有效预测指标**：  
+  - **过往行为**：相似岗位的历史表现是未来绩效的最佳预测（如内部晋升成功率高于外部招聘）。  
+  - **技能测试**：适用于基础技能验证（如编程测试），但对复杂软技能（如领导力）效果有限。  
+  - **尽责性（Conscientiousness）**：人格特质中唯一与工作表现稳定相关的维度（如细致、自律）。  
+- **选拔工具的局限性**：  
+  - **低解释力**：即使尽责性与绩效的相关系数（0.3）较高，其解释力（R²=9%）仍有限。  
+  - **过度依赖「A级玩家」神话**：单纯追求「顶尖人才」忽略管理赋能，易导致团队失衡。  
 
-#### **2. 选拔的科学性与局限性**  
-• **有效预测指标**：  
-  • **过往行为**：相似岗位的历史表现是未来绩效的最佳预测（如内部晋升成功率高于外部招聘）。  
-  • **技能测试**：适用于基础技能验证（如编程测试），但对复杂软技能（如领导力）效果有限。  
-  • **尽责性（Conscientiousness）**：人格特质中唯一与工作表现稳定相关的维度（如细致、自律）。  
+#### 3. 组织文化的自我强化：ASA模型（吸引-选择-流失）  
 
-• **选拔工具的局限性**：  
-  • **低解释力**：即使尽责性与绩效的相关系数（0.3）较高，其解释力（R²=9%）仍有限。  
-  • **过度依赖“A级玩家”神话**：单纯追求“顶尖人才”忽略管理赋能，易导致团队失衡。  
+- **机制**：  
+  - **吸引（Attraction）**：候选人基于文化感知自我筛选（如谷歌吸引创新者）；  
+  - **选择（Selection）**：企业倾向选择与现有团队相似的人（「镜像效应」）；  
+  - **流失（Attrition）**：文化不契合者主动离职。  
+- **副作用**：自然导致组织同质化，抑制多样性。  
+  - **案例**：硅谷科技公司长期以白人男性为主，因ASA循环强化固有文化。  
 
-#### **3. 组织文化的自我强化：ASA模型（吸引-选择-流失）**  
-• **机制**：  
-  1. **吸引（Attraction）**：候选人基于文化感知自我筛选（如谷歌吸引创新者）；  
-  2. **选择（Selection）**：企业倾向选择与现有团队相似的人（“镜像效应”）；  
-  3. **流失（Attrition）**：文化不契合者主动离职。  
-• **副作用**：自然导致组织同质化，抑制多样性。  
-  • **案例**：硅谷科技公司长期以白人男性为主，因ASA循环强化固有文化。  
+#### 4. 技术驱动的招聘变革  
 
-#### **4. 技术驱动的招聘变革**  
-• **新趋势与挑战**：  
-  • **被动求职者主导市场**：美国超半数跳槽者通过LinkedIn等平台被主动挖角，非主动求职。  
-  • **ATS系统（Applicant Tracking Systems）**：简历关键词筛选导致“优化游戏”（如堆砌术语而非真实能力）。  
-  • **招聘流程外包（RPO）**与灵活用工：通过劳务派遣、外包降低雇佣风险，但削弱员工归属感。  
+- **新趋势与挑战**：  
+  - **被动求职者主导市场**：美国超半数跳槽者通过LinkedIn等平台被主动挖角，非主动求职。  
+  - **ATS系统（Applicant Tracking Systems）**：简历关键词筛选导致「优化游戏」（如堆砌术语而非真实能力）。  
+  - **招聘流程外包（RPO）** 与灵活用工：通过劳务派遣、外包降低雇佣风险，但削弱员工归属感。  
 
----
+#### 5. 实践启示
 
-### **实践启示**  
-1. **优化招募策略**：  
-   • **真实职位预览**：通过视频、员工访谈展示真实工作场景（如亚马逊“Day 1”文化宣传）。  
-   • **精准投放**：在垂直社区（如GitHub技术论坛）而非通用平台发布职位，吸引对口人才。  
-
-2. **科学化选拔流程**：  
-   • **结构化面试**：使用标准化问题（如STAR法则）减少主观偏见。  
-   • **情景模拟测试**：针对管理岗设计“冲突处理模拟”，评估实际行为而非自我陈述。  
-
-3. **打破ASA循环，促进多样性**：  
-   • **强制多样性目标**：设定性别、族裔招聘比例（如英特尔2020年实现全岗位性别平衡）。  
-   • **盲选机制**：隐藏简历中性别、年龄信息，聚焦技能与经验。  
-
-4. **技术工具的双刃剑应对**：  
-   • **ATS优化**：培训HR识别“关键词包装”陷阱，结合技能测试验证简历真实性。  
-   • **数据驱动决策**：追踪招聘渠道转化率（如内推 vs 猎头），优化资源分配。  
+- **优化招募策略**：  
+  - **真实职位预览**：通过视频、员工访谈展示真实工作场景（如亚马逊「Day 1」文化宣传）。  
+  - **精准投放**：在垂直社区（如GitHub技术论坛）而非通用平台发布职位，吸引对口人才。  
+- **科学化选拔流程**：  
+  - **结构化面试**：使用标准化问题（如STAR法则）减少主观偏见。  
+  - **情景模拟测试**：针对管理岗设计「冲突处理模拟」，评估实际行为而非自我陈述。  
+- **打破ASA循环，促进多样性**：  
+  - **强制多样性目标**：设定性别、族裔招聘比例（如英特尔2020年实现全岗位性别平衡）。  
+  - **盲选机制**：隐藏简历中性别、年龄信息，聚焦技能与经验。  
+- **技术工具的双刃剑应对**：  
+  - **ATS优化**：培训HR识别「关键词包装」陷阱，结合技能测试验证简历真实性。  
+  - **数据驱动决策**：追踪招聘渠道转化率（如内推 vs 猎头），优化资源分配。  
 
 ---
 
 ### **总结**  
-• **招聘是战略而非事务**：需与业务目标、文化塑造深度绑定，而非简单“填空式”招人。  
+• **招聘是战略而非事务**：需与业务目标、文化塑造深度绑定，而非简单「填空式」招人。  
 • **平衡效率与人性化**：技术提升效率，但需避免算法偏见（如ATS过滤非名校背景）。  
 • **长期主义视角**：通过真实招募降低离职成本，通过多样性注入增强组织韧性。  
 • **动态迭代**：定期复盘招聘数据（如留存率、晋升率），持续优化流程。
 
+---
 
-
-## Prompt
+### 附录：字幕
 
 下面提供 Coursera Business Foundations 系列课程的第三课 Managing Social and Human Capital 的视频 subtitle 及 slide，请用中文进行总结并提炼关键结论
 
