--- a/03. Managing Social and Human Capital/Module 1 Motivation and Reward/1.8 Managing Performance.md
+++ b/03. Managing Social and Human Capital/Module 1 Motivation and Reward/1.8 Managing Performance.md
@@ -1,80 +1,78 @@
-### **Coursera《管理人力与社会资本》Week 1: 动机与奖励（模块1-绩效管理篇）总结与关键结论**
+## Coursera 商业基础课程《管理社会与人力资本》 - 模块1 - 动机与激励
 
----
+### 课程1.8 绩效管理
 
-#### **核心主题**  
 传统绩效评估体系的局限性与新兴替代模式，强调**持续反馈**与**心理安全**在提升员工表现中的核心作用，揭示评估过程中的认知偏差与系统性缺陷。
 
----
+#### 1. 绩效评估的历史演变与核心目标 
 
-### **关键内容提炼**
+- **起源**：  
+  - **19世纪英国**：Robert Owen的棉纺厂用彩色纺锤标识工人绩效（可视化即时反馈）。  
+  - **二战美国**：政府立法推动绩效评估，防范歧视并规范联邦部门管理。  
+- **传统三目标**：  
+  - **评估过去**（奖励依据）；  
+  - **改进当前**（技能提升）；  
+  - **规划未来**（职业发展）。  
+- **现代异化**：过度聚焦量化指标（如强制排名、目标分解），忽视人性化沟通与文化适配。
 
-#### **1. 绩效评估的历史演变与核心目标**  
-• **起源**：  
-  • **19世纪英国**：Robert Owen的棉纺厂用彩色纺锤标识工人绩效（可视化即时反馈）。  
-  • **二战美国**：政府立法推动绩效评估，防范歧视并规范联邦部门管理。  
-• **传统三目标**：  
-  1. **评估过去**（奖励依据）；  
-  2. **改进当前**（技能提升）；  
-  3. **规划未来**（职业发展）。  
-• **现代异化**：过度聚焦量化指标（如强制排名、目标分解），忽视人性化沟通与文化适配。
+#### 2. 传统绩效评估的五大系统性缺陷  
 
-#### **2. 传统绩效评估的五大系统性缺陷**  
-• **认知偏差**：  
-  • **过度自信偏差**：员工普遍自评高于实际（平均自认80分位，实际50分位），导致反馈抵触。  
-  • **基本归因错误**：管理者将低效归因于“人差”而非“情境”（如堵车超车者被判定为“混蛋”而非紧急情况）。  
-  • **自我实现预言**：管理者对“高潜力者”投入更多资源，加剧表现差异（如忽视“普通员工”的成长机会）。  
-• **反馈延迟**：年度评估无法关联实时行为，信息失真（如“电话传话游戏”效应）。  
-• **激励失效**：薪酬涨幅有限（2%-3%）削弱评估动力，员工视其为“流程任务”。  
-• **文化冲突**：强制排名破坏协作（如微软曾因“末位淘汰制”导致内部恶性竞争）。  
+- **认知偏差**：  
+  - **过度自信偏差**：员工普遍自评高于实际（平均自认80分位，实际50分位），导致反馈抵触。  
+  - **基本归因错误**：管理者将低效归因于「人差」而非「情境」（如堵车超车者被判定为「混蛋」而非紧急情况）。  
+  - **自我实现预言**：管理者对「高潜力者」投入更多资源，加剧表现差异（如忽视「普通员工」的成长机会）。  
+- **反馈延迟**：年度评估无法关联实时行为，信息失真（如「电话传话游戏」效应）。  
+- **激励失效**：薪酬涨幅有限（2%-3%）削弱评估动力，员工视其为「流程任务」。  
+- **文化冲突**：强制排名破坏协作（如微软曾因「末位淘汰制」导致内部恶性竞争）。  
 
-#### **3. 新兴替代模式：持续反馈与取消评估**  
-• **趋势**：微软、IBM、GE等企业取消年度评估，转向：  
-  • **高频对话**：管理者与员工定期（如月度）非正式沟通，聚焦即时问题解决。  
-  • **动态目标**：脱离“年度计划分解”，适应业务快速迭代（如OKR季度调整）。  
-  • **心理安全（Psychological Safety）**：  
-    ◦ **定义**：员工不因坦诚错误或弱点受罚（如谷歌“安全失败”文化）。  
-    ◦ **实践**：分离反馈与薪酬决策，避免“圣诞老人效应”（员工隐瞒问题以保奖金）。  
-• **优势**：  
-  • **降低认知负荷**：实时反馈减少记忆偏差；  
-  • **增强适应性**：快速响应市场变化；  
-  • **提升归属感**：员工感知被尊重而非“考核对象”。  
+#### 3. 新兴替代模式：持续反馈与取消评估  
 
-#### **4. 有效反馈的科学原则**  
-• **负面反馈的“七倍效应”**：员工对批评的敏感度远高于表扬，需谨慎措辞（如“三明治反馈法”：肯定-建议-鼓励）。  
-• **行为锚定（Behavioral Anchoring）**：  
-  • **举例**：替代“你沟通能力差”，改为“上周客户会议中，3次打断同事发言，建议使用倾听笔记”。  
-• **发展性对话**：  
-  • **提问导向**：“哪些资源能帮你提升？”而非“为什么没达标？”  
-  • **共情表达**：承认情境限制（如“我知道项目周期紧张，但代码质量需优先”）。  
+- **趋势**：微软、IBM、GE等企业取消年度评估，转向：  
+  - **高频对话**：管理者与员工定期（如月度）非正式沟通，聚焦即时问题解决。  
+  - **动态目标**：脱离「年度计划分解」，适应业务快速迭代（如OKR季度调整）。  
+  - **心理安全（Psychological Safety）**：  
+    - **定义**：员工不因坦诚错误或弱点受罚（如谷歌「安全失败」文化）。  
+    - **实践**：分离反馈与薪酬决策，避免「圣诞老人效应」（员工隐瞒问题以保奖金）。  
+- **优势**：  
+  - **降低认知负荷**：实时反馈减少记忆偏差；  
+  - **增强适应性**：快速响应市场变化；  
+  - **提升归属感**：员工感知被尊重而非「考核对象」。  
 
----
+#### 4. 有效反馈的科学原则
 
-### **实践启示**  
-1. **重构评估流程**：  
-   • **从年度到日常**：用Slack/Trello记录里程碑反馈，替代年终集中评审。  
-   • **360度轻量化**：季度匿名同事互评（3-5个关键词），避免繁琐表单。  
+- **负面反馈的「七倍效应」**：员工对批评的敏感度远高于表扬，需谨慎措辞（如「三明治反馈法」：肯定-建议-鼓励）。  
+- **行为锚定（Behavioral Anchoring）**：  
+  - **举例**：替代「你沟通能力差」，改为「上周客户会议中，3次打断同事发言，建议使用倾听笔记」。  
+- **发展性对话**：  
+  - **提问导向**：「哪些资源能帮你提升？」而非「为什么没达标？」 
+  - **共情表达**：承认情境限制（如「我知道项目周期紧张，但代码质量需优先」）。  
 
-2. **管理者赋能**：  
-   • **偏差训练**：通过案例研讨（如归因错误模拟）提升评估客观性。  
-   • **反馈工具箱**：提供话术模板（如“我观察到…+影响…+建议…”）。  
+#### 实践启示  
 
-3. **文化基建**：  
-   • **透明薪酬公式**：如Buffer公开薪资计算器（岗位+经验+绩效系数），减少猜疑。  
-   • **失败复盘会**：定期分享“搞砸”案例（如Spotify的“Fail Wall”），弱化惩罚 stigma。  
-
-4. **技术工具辅助**：  
-   • **AI情绪分析**：如Humu用NLP分析员工反馈，提示管理者沟通风险点。  
-   • **数据看板**：实时展示目标进度（如Asana整合OKR与任务流），替代年终PPT汇报。  
+- **重构评估流程**：  
+  - **从年度到日常**：用Slack/Trello记录里程碑反馈，替代年终集中评审。  
+  - **360度轻量化**：季度匿名同事互评（3-5个关键词），避免繁琐表单。  
+- **管理者赋能**：  
+  - **偏差训练**：通过案例研讨（如归因错误模拟）提升评估客观性。  
+  - **反馈工具箱**：提供话术模板（如「我观察到…+影响…+建议…」）。  
+- **文化基建**：  
+  - **透明薪酬公式**：如Buffer公开薪资计算器（岗位+经验+绩效系数），减少猜疑。  
+  - **失败复盘会**：定期分享「搞砸」案例（如Spotify的「Fail Wall」），弱化惩罚 stigma。  
+- **技术工具辅助**：  
+  - **AI情绪分析**：如Humu用NLP分析员工反馈，提示管理者沟通风险点。  
+  - **数据看板**：实时展示目标进度（如Asana整合OKR与任务流），替代年终PPT汇报。  
 
 ---
 
-### **总结**  
-• **评估的本质是持续对话**：传统“打分制”终将被敏捷反馈机制取代，核心是建立信任而非控制。  
-• **人性化 > 标准化**：抑制认知偏差需制度设计（如匿名校准会）与文化浸润（心理安全）双轨并进。  
-• **未来导向**：绩效管理正从“向后看问责”转向“向前看赋能”，目标是构建**学习型组织**而非“考核机器”。
+#### 总结
 
-## Prompt
+- **评估的本质是持续对话**：传统「打分制」终将被敏捷反馈机制取代，核心是建立信任而非控制。  
+- **人性化 > 标准化**：抑制认知偏差需制度设计（如匿名校准会）与文化浸润（心理安全）双轨并进。  
+- **未来导向**：绩效管理正从「向后看问责」转向「向前看赋能」，目标是构建**学习型组织**而非「考核机器」。
+
+---
+
+### 附录：字幕
 
 下面提供 Coursera Business Foundations 系列课程的第三课 Managing Social and Human Capital 的视频 subtitle 及 slide，请用中文进行总结并提炼关键结论
 
