--- a/03. Managing Social and Human Capital/Module 2 Tasks, Jobs, and Systems of Work/2.3 Drawbacks and Rethinking Job Design.md
+++ b/03. Managing Social and Human Capital/Module 2 Tasks, Jobs, and Systems of Work/2.3 Drawbacks and Rethinking Job Design.md
@@ -1,73 +1,66 @@
-### **Coursera《管理人力与社会资本》Week 2: 任务、工作与工作系统（模块2-工作设计反思篇）总结与关键结论**
+## Coursera 商业基础课程《管理社会与人力资本》 - 模块2 - 任务、工作与工作系统
 
----
+### 课程2.3 工作设计的弊端及反思
 
-#### **核心主题**  
 批判泰勒科学管理体系的弊端，提出**人本主义工作设计**的四大心理学原则（自主性、多样性、意义感、反馈机制），揭示工作体验对效率与质量的深层影响。
 
----
+#### 1. 泰勒科学管理体系的系统性缺陷
 
-### **关键内容提炼**
+- **人性压抑**：  
+  - **重复性倦怠**：工人长期执行单一任务（如流水线组装）导致注意力涣散（心理学「习惯化效应」），增加操作失误风险（如Lordstown工厂汽车零件缺失或遭破坏）。  
+  - **信任崩塌**：计件工资（Piece Rate）引发工人集体限产（如霍桑实验中的「默契限速」），因担忧企业会因效率提升而削减单价。  
+- **质量反噬**：  
+  - **极端案例**：通用汽车Lordstown工厂因员工不满，Vega车型下线故障率极高，需设立「返修停车场」而非返修区，直接导致市场竞争力丧失。  
+- **代际冲突**：  
+  - 新生代工人（如1970年代美国蓝领）拒绝接受父辈的「温饱交易」（用枯燥工作换取稳定收入），触发大规模离职与罢工。
 
-#### **1. 泰勒科学管理体系的系统性缺陷**  
-• **人性压抑**：  
-  • **重复性倦怠**：工人长期执行单一任务（如流水线组装）导致注意力涣散（心理学“习惯化效应”），增加操作失误风险（如Lordstown工厂汽车零件缺失或遭破坏）。  
-  • **信任崩塌**：计件工资（Piece Rate）引发工人集体限产（如霍桑实验中的“默契限速”），因担忧企业会因效率提升而削减单价。  
-• **质量反噬**：  
-  • **极端案例**：通用汽车Lordstown工厂因员工不满，Vega车型下线故障率极高，需设立“返修停车场”而非返修区，直接导致市场竞争力丧失。  
-• **代际冲突**：  
-  • 新生代工人（如1970年代美国蓝领）拒绝接受父辈的“温饱交易”（用枯燥工作换取稳定收入），触发大规模离职与罢工。
+#### 2. 霍桑实验的颠覆性启示
 
-#### **2. 霍桑实验的颠覆性启示**  
-• **社会性需求**：工人效率不仅受物质激励驱动，更依赖**同事互动**与**群体归属感**（如Western Electric工厂中工人自发形成协作网络）。  
-• **管理悖论**：过度标准化（如泰勒主义）反而抑制生产力——当员工失去对工作的控制权，会通过消极抵抗（如故意降低质量）夺回自主性。
+- **社会性需求**：工人效率不仅受物质激励驱动，更依赖**同事互动**与**群体归属感**（如Western Electric工厂中工人自发形成协作网络）。  
+- **管理悖论**：过度标准化（如泰勒主义）反而抑制生产力——当员工失去对工作的控制权，会通过消极抵抗（如故意降低质量）夺回自主性。
 
-#### **3. 人本主义工作设计的四大原则**  
+#### 3. 人本主义工作设计的四大原则
+
 1. **自主性（Autonomy）**：  
-   • **定义**：赋予员工对工作方式与节奏的控制权（如自定休息时间、选择工具）。  
-   • **案例**：丰田“安灯系统”允许工人暂停生产线解决问题，打破泰勒式绝对服从。  
-   • **效果**：降低压力、提升责任感（心理学“自我决定理论”）。  
+   - **定义**：赋予员工对工作方式与节奏的控制权（如自定休息时间、选择工具）。  
+   - **案例**：丰田「安灯系统」允许工人暂停生产线解决问题，打破泰勒式绝对服从。  
+   - **效果**：降低压力、提升责任感（心理学「自我决定理论」）。  
 
 2. **多样性（Variety）**：  
-   • **神经科学依据**：大脑对重复刺激产生“习惯化”，导致注意力下降（如长期噪音被忽略）。  
-   • **实践**：岗位轮岗（如护士跨科室轮换）、任务交叉培训（如工程师参与客户调研），避免认知麻木。  
+   - **神经科学依据**：大脑对重复刺激产生「习惯化」，导致注意力下降（如长期噪音被忽略）。  
+   - **实践**：岗位轮岗（如护士跨科室轮换）、任务交叉培训（如工程师参与客户调研），避免认知麻木。  
 
 3. **意义感（Significance）**：  
-   • **关键发现**：当员工理解工作对整体的贡献，投入度显著提升（如医院清洁工得知消毒可降低感染率后，清洁质量提高30%）。  
-   • **方法**：通过可视化数据（如患者康复率看板）连接个体任务与组织使命。  
+   - **关键发现**：当员工理解工作对整体的贡献，投入度显著提升（如医院清洁工得知消毒可降低感染率后，清洁质量提高30%）。  
+   - **方法**：通过可视化数据（如患者康复率看板）连接个体任务与组织使命。  
 
 4. **反馈机制（Feedback）**：  
-   • **即时性价值**：定期绩效反馈（如每日质量检查报告）帮助员工调整行为，增强掌控感。  
-   • **案例**：软件公司使用敏捷看板（Scrum Board），实时追踪任务进度与问题点。
+   - **即时性价值**：定期绩效反馈（如每日质量检查报告）帮助员工调整行为，增强掌控感。  
+   - **案例**：软件公司使用敏捷看板（Scrum Board），实时追踪任务进度与问题点。
 
-#### **4. 效率与人性化的新平衡**  
-• **从“机器适配”到“人机协同”**：  
-  • **传统泰勒模式**：让人适应机器（固定工位、标准化动作）。  
-  • **现代模式**：让机器辅助人（如亚马逊仓库机器人搬运重物，工人专注分拣决策）。  
-• **文化重构**：  
-  • **管理层角色转变**：从“监工”变为“赋能者”，提供资源而非指令（如谷歌OKR中的“自下而上”目标设定）。  
-  • **组织韧性提升**：多样化技能与自主性增强系统抗风险能力（如疫情期间远程团队的高效协作）。
+#### 4. 效率与人性化的新平衡
 
----
+- **从「机器适配」到「人机协同」**：  
+  - **传统泰勒模式**：让人适应机器（固定工位、标准化动作）。  
+  - **现代模式**：让机器辅助人（如亚马逊仓库机器人搬运重物，工人专注分拣决策）。  
+- **文化重构**：  
+  - **管理层角色转变**：从「监工」变为「赋能者」，提供资源而非指令（如谷歌OKR中的「自下而上」目标设定）。  
+  - **组织韧性提升**：多样化技能与自主性增强系统抗风险能力（如疫情期间远程团队的高效协作）。
 
-### **关键结论**  
+#### 5. 关键结论
+
 1. **效率≠人性对立**：泰勒主义在工业化初期必要，但知识经济时代需**用心理学重构效率公式**——员工幸福感与质量正相关。  
 2. **沉默成本显性化**：忽视工作体验的隐性代价（如返修成本、离职损失）远超短期人力节省。  
 3. **数据驱动人本设计**：通过员工满意度调研（如盖洛普Q12）、错误率分析等量化工具，平衡流程标准化与个性化需求。  
-4. **未来工作系统的核心**：将**意义感**嵌入任务设计（如ESG指标挂钩绩效），回应Z世代对“工作价值”的强烈诉求。
+4. **未来工作系统的核心**：将**意义感**嵌入任务设计（如ESG指标挂钩绩效），回应Z世代对「工作价值」的强烈诉求。
 
 ---
 
-### **关联案例（下节预告）**  
-• **通用汽车（GM）**：泰勒主义僵化执行的代价——20世纪70年代市场份额被日本车企吞噬。  
-• **丰田生产系统（TPS）**：通过“持续改进”（Kaizen）和“尊重人性”原则，实现效率与人本的双重突破。  
+#### 总结
 
----
+工作设计正经历从「机械论」到「生态论」的范式革命。**任务不再只是齿轮的咬合，而是意义的载体**。成功的企业将深挖「人性需求」这座效率富矿，在标准化与灵活性、控制与信任之间找到动态平衡点。
 
-### **总结**  
-工作设计正经历从“机械论”到“生态论”的范式革命。**任务不再只是齿轮的咬合，而是意义的载体**。成功的企业将深挖“人性需求”这座效率富矿，在标准化与灵活性、控制与信任之间找到动态平衡点。
-
-## Prompt
+### 附录：字幕
 
 下面提供 Coursera Business Foundations 系列课程的第三课 Managing Social and Human Capital 的视频 subtitle 及 slide，请用中文对该视频进行总结并提炼关键结论
 
