--- a/03. Managing Social and Human Capital/Module 2 Tasks, Jobs, and Systems of Work/2.1 Tasks vs Jobs.md
+++ b/03. Managing Social and Human Capital/Module 2 Tasks, Jobs, and Systems of Work/2.1 Tasks vs Jobs.md
@@ -1,68 +1,57 @@
-### **Coursera《管理人力与社会资本》Week 2: 任务、工作与工作系统（模块2-任务与工作篇）总结与关键结论**
+## Coursera 商业基础课程《管理社会与人力资本》 - 模块2 - 任务、工作与工作系统
+
+### 课程2.1 任务与工作
+
+从「任务」与「工作」的基本定义出发，解析工作设计的底层逻辑及其对组织架构的影响，探讨传统与现代工作分析的演变。
+
+#### 1. 任务（Task）与工作（Job）的本质区别 
+
+- **任务**：  
+  - **定义**：独立的、具体的操作单元（如木匠工作中的「安装门框」或「贴石膏板」）。  
+  - **特点**：需特定技能，可独立完成，是构成工作的基本元素。  
+- **工作**：  
+  - **定义**：一系列相关任务的集合，形成完整职责（如「木匠」这一职位包含多项任务）。  
+  - **设计原则**：任务需具备内在关联性，避免无关任务堆砌导致招聘困难或员工绩效低下。  
+  - **反例**：若工作中任务差异过大（如同时要求编程与销售），可能导致岗位难以匹配人才。
+
+#### 2. 工作分析（Job Analysis）的演变  
+
+- **传统方法**：  
+  - **专家主导**：外部顾问通过观察、时间记录等「科学管理」手段拆解任务（如泰勒制）。  
+  - **标准化流程**：强调精细化分工（如福特流水线），任务高度细分。  
+- **现代实践**：  
+  - **员工参与**：直接询问在职者工作内容（如「你每天做什么？如何分配时间？」）。  
+  - **动态适应**：因岗位边界模糊化（如敏捷团队中的角色交叉），减少僵化定义，更关注灵活性与协作需求。
+
+#### 3. 组织架构图（Organizational Chart）的功能与局限  
+- **核心作用**：  
+  - **可视化层级**：明确汇报关系（如谁向谁汇报）与决策权分配（如谁有权批准预算）。  
+  - **任务-工作-架构的嵌套逻辑**：任务→工作→部门→组织架构，形成管理链条。  
+- **局限性**：  
+  - **静态视角**：难以反映非正式沟通网络（如跨部门协作）。  
+  - **过度简化**：忽略知识型工作中任务流动性与创造性（如研发岗位的灵活职责）。
+
+#### 4. 关键结论  
+
+- **任务设计决定工作效能**：  
+  - 任务间的技能连贯性是工作设计成功的关键（如软件开发中「需求分析-编码-测试」的任务链）。  
+  - 避免「大杂烩」式岗位设计（如行政兼财务），可提升招聘精准度与员工满意度。  
+- **从「管控」到「赋能」的转变**：  
+  - 传统工作分析（如制造业流水线）追求效率最大化，现代知识经济更需弹性（如谷歌「20%自由时间」机制）。  
+- **组织架构的双刃剑效应**：  
+  - 明确汇报关系可降低沟通成本，但僵化层级可能抑制创新（如初创企业扁平化 vs 传统企业金字塔结构）。  
+- **未来工作设计趋势**：  
+  - **技能导向**：任务组合围绕核心能力（如「数据分析+业务洞察」），而非固定岗位描述。  
+  - **人机协同**：AI接管重复性任务（如数据录入），人类聚焦创造性工作（如策略制定）。  
 
 ---
 
-#### **核心主题**  
-从“任务”与“工作”的基本定义出发，解析工作设计的底层逻辑及其对组织架构的影响，探讨传统与现代工作分析的演变。
+#### 总结  
+工作设计是连接个体贡献与组织战略的桥梁。理解「任务-工作-系统」的嵌套关系，既能避免微观层面的低效（如任务冲突），也能支撑宏观层面的敏捷性（如快速适应市场变化）。后续课程将深入工程学（效率驱动）与心理学（员工动机）对工作设计的影响，并剖析不同企业模式的成败根源。
 
 ---
 
-### **关键内容提炼**
-
-#### **1. 任务（Task）与工作（Job）的本质区别**  
-• **任务**：  
-  • **定义**：独立的、具体的操作单元（如木匠工作中的“安装门框”或“贴石膏板”）。  
-  • **特点**：需特定技能，可独立完成，是构成工作的基本元素。  
-• **工作**：  
-  • **定义**：一系列相关任务的集合，形成完整职责（如“木匠”这一职位包含多项任务）。  
-  • **设计原则**：任务需具备内在关联性，避免无关任务堆砌导致招聘困难或员工绩效低下。  
-  • **反例**：若工作中任务差异过大（如同时要求编程与销售），可能导致岗位难以匹配人才。
-
-#### **2. 工作分析（Job Analysis）的演变**  
-• **传统方法**：  
-  • **专家主导**：外部顾问通过观察、时间记录等“科学管理”手段拆解任务（如泰勒制）。  
-  • **标准化流程**：强调精细化分工（如福特流水线），任务高度细分。  
-• **现代实践**：  
-  • **员工参与**：直接询问在职者工作内容（如“你每天做什么？如何分配时间？”）。  
-  • **动态适应**：因岗位边界模糊化（如敏捷团队中的角色交叉），减少僵化定义，更关注灵活性与协作需求。
-
-#### **3. 组织架构图（Organizational Chart）的功能与局限**  
-• **核心作用**：  
-  • **可视化层级**：明确汇报关系（如谁向谁汇报）与决策权分配（如谁有权批准预算）。  
-  • **任务-工作-架构的嵌套逻辑**：任务→工作→部门→组织架构，形成管理链条。  
-• **局限性**：  
-  • **静态视角**：难以反映非正式沟通网络（如跨部门协作）。  
-  • **过度简化**：忽略知识型工作中任务流动性与创造性（如研发岗位的灵活职责）。
-
----
-
-### **关键结论**  
-1. **任务设计决定工作效能**：  
-   • 任务间的技能连贯性是工作设计成功的关键（如软件开发中“需求分析-编码-测试”的任务链）。  
-   • 避免“大杂烩”式岗位设计（如行政兼财务），可提升招聘精准度与员工满意度。  
-
-2. **从“管控”到“赋能”的转变**：  
-   • 传统工作分析（如制造业流水线）追求效率最大化，现代知识经济更需弹性（如谷歌“20%自由时间”机制）。  
-
-3. **组织架构的双刃剑效应**：  
-   • 明确汇报关系可降低沟通成本，但僵化层级可能抑制创新（如初创企业扁平化 vs 传统企业金字塔结构）。  
-
-4. **未来工作设计趋势**：  
-   • **技能导向**：任务组合围绕核心能力（如“数据分析+业务洞察”），而非固定岗位描述。  
-   • **人机协同**：AI接管重复性任务（如数据录入），人类聚焦创造性工作（如策略制定）。  
-
----
-
-### **关联实践案例**（后续小节预告）  
-• **通用汽车（GM）**：传统科层制与高度分工的代表，依赖标准化任务设计。  
-• **丰田（Toyota）**：精益生产模式，通过“持续改进”（Kaizen）让员工参与任务优化，打破僵化分工。  
-
----
-
-### **总结**  
-工作设计是连接个体贡献与组织战略的桥梁。理解“任务-工作-系统”的嵌套关系，既能避免微观层面的低效（如任务冲突），也能支撑宏观层面的敏捷性（如快速适应市场变化）。后续课程将深入工程学（效率驱动）与心理学（员工动机）对工作设计的影响，并剖析不同企业模式的成败根源。
-
-## Prompt
+### 附录：字幕
 
 下面提供 Coursera Business Foundations 系列课程的第三课 Managing Social and Human Capital 的视频 subtitle 及 slide，请用中文对该视频进行总结并提炼关键结论
 
