--- a/03. Managing Social and Human Capital/Module 2 Tasks, Jobs, and Systems of Work/2.2 How to Design Jobs.md
+++ b/03. Managing Social and Human Capital/Module 2 Tasks, Jobs, and Systems of Work/2.2 How to Design Jobs.md
@@ -1,76 +1,69 @@
-### **Coursera《管理人力与社会资本》Week 2: 任务、工作与工作系统（模块2-工作设计篇）总结与关键结论**
+## Coursera 商业基础课程《管理社会与人力资本》 - 模块2 - 任务、工作与工作系统
 
----
+### 课程2.2 如何设计工作
 
-#### **核心主题**  
 以**泰勒科学管理理论**为核心，解析工业化时代工作设计的底层逻辑，揭示任务分解、标准化与效率驱动对现代工作系统的深远影响。
 
----
+#### 1. 传统工厂的混乱与效率困境
 
-### **关键内容提炼**
-
-#### **1. 传统工厂的混乱与效率困境**  
-• **20世纪初工厂现状**：  
-  • **无序性**：零件堆积、工人流动率高（年流失率200%-300%）、外包工段各自为政。  
-  • **低效根源**：  
+- **20世纪初工厂现状**：  
+  - **无序性**：零件堆积、工人流动率高（年流失率200%-300%）、外包工段各自为政。  
+  - **低效根源**：  
     1. 任务边界模糊（如技工自行选择工具和方法）；  
     2. 缺乏流程追踪（需用标签跟踪零件流向）；  
     3. 非熟练工占比高，协作断裂。  
 
-#### **2. 泰勒科学管理理论的革命性突破**  
-• **核心原则**：  
-  1. **任务分解（Deskilling）**：  
-     ◦ 将复杂工作拆解为简单任务（如美发店案例：接待、洗发、剪发、吹干分离）。  
-     ◦ **目标**：高技能者专注核心任务（如发型师仅剪发），低技能者执行辅助任务，降低人力成本。  
-  2. **标准化流程**：  
-     ◦ **时间与动作研究**：通过摄影记录（如Muybridge的连续摄影技术）分析最优动作路径，制定标准操作。  
-     ◦ **消除自主性**：工程师定义“唯一正确方法”，工人按指令执行（如流水线固定工位）。  
-  3. **计件工资（Piece Rate）**：  
-     ◦ 按任务量支付报酬，将效率提升与工人收益绑定（如每组装一个零件获得固定酬劳）。  
+#### 2. 泰勒科学管理理论的革命性突破
 
-• **历史意义**：  
-  • **制造业效率飞跃**：福特流水线（T型车生产时间从12小时缩短至93分钟）验证其有效性。  
-  • **全球扩散**：通过跨国公司（如福特）推广至欧洲、苏联等地，成为工业化标配。  
+- **核心原则**：  
+  - **任务分解（Deskilling）**：  
+    - 将复杂工作拆解为简单任务（如美发店案例：接待、洗发、剪发、吹干分离）。  
+    - **目标**：高技能者专注核心任务（如发型师仅剪发），低技能者执行辅助任务，降低人力成本。  
+  - **标准化流程**：  
+    - **时间与动作研究**：通过摄影记录（如Muybridge的连续摄影技术）分析最优动作路径，制定标准操作。  
+    - **消除自主性**：工程师定义「唯一正确方法」，工人按指令执行（如流水线固定工位）。  
+  - **计件工资（Piece Rate）**：  
+    - 按任务量支付报酬，将效率提升与工人收益绑定（如每组装一个零件获得固定酬劳）。  
+- **历史意义**：  
+  - **制造业效率飞跃**：福特流水线（T型车生产时间从12小时缩短至93分钟）验证其有效性。  
+  - **全球扩散**：通过跨国公司（如福特）推广至欧洲、苏联等地，成为工业化标配。  
 
-#### **3. 科学管理的双重影响**  
-• **优势**：  
-  • **效率革命**：单位时间产出大幅提升，生产成本降低。  
-  • **规模化复制**：标准化降低对个体技能的依赖，快速培训新工人。  
-• **局限性**：  
-  • **人性压抑**：工人沦为“机器延伸”（如卓别林《摩登时代》讽刺的机械重复）。  
-  • **创新扼杀**：严格流程抑制改进动力（如丰田后来自主突破泰勒模式）。  
-  • **适用边界**：仅适合重复性工作（如制造业），知识型工作（如研发）需灵活性。  
+#### 3. 科学管理的双重影响 
 
-#### **4. 现代工作设计的启示**  
-• **任务分工的演进**：  
-  • **服务业应用**：快餐业（如麦当劳）沿用任务分解（炸薯条、收银、清洁独立岗位）。  
-  • **数字化转型**：AI接管标准化任务（如客服机器人），人类聚焦决策与创意。  
-• **弹性平衡**：  
-  • **敏捷团队**：保留任务拆解逻辑（如Scrum中的Sprint任务），但赋予自主权（如自选工作方法）。  
-  • **人本回归**：谷歌“20%自由时间”机制，在效率框架内保留创新空间。  
+- **优势**：  
+  - **效率革命**：单位时间产出大幅提升，生产成本降低。  
+  - **规模化复制**：标准化降低对个体技能的依赖，快速培训新工人。  
+- **局限性**：  
+  - **人性压抑**：工人沦为「机器延伸」（如卓别林《摩登时代》讽刺的机械重复）。  
+  - **创新扼杀**：严格流程抑制改进动力（如丰田后来自主突破泰勒模式）。  
+  - **适用边界**：仅适合重复性工作（如制造业），知识型工作（如研发）需灵活性。  
 
----
+#### 4. 现代工作设计的启示
 
-### **关键结论**  
+- **任务分工的演进**：  
+  - **服务业应用**：快餐业（如麦当劳）沿用任务分解（炸薯条、收银、清洁独立岗位）。  
+  - **数字化转型**：AI接管标准化任务（如客服机器人），人类聚焦决策与创意。  
+- **弹性平衡**：  
+  - **敏捷团队**：保留任务拆解逻辑（如Scrum中的Sprint任务），但赋予自主权（如自选工作方法）。  
+  - **人本回归**：谷歌「20%自由时间」机制，在效率框架内保留创新空间。  
+
+#### 5. 关键结论
+
 1. **效率与人性需动态平衡**：泰勒主义奠定了现代管理基础，但需在标准化与员工自主性间寻找新平衡点。  
-2. **技能分层仍是底层逻辑**：即使知识经济时代，“核心任务-辅助任务”分工模式（如高管-外包团队）依然普遍。  
-3. **技术赋能新泰勒主义**：AI与数据分析使任务拆解更精细化（如Uber算法调度），但需规避“数字流水线”对人的异化。  
+2. **技能分层仍是底层逻辑**：即使知识经济时代，「核心任务-辅助任务」分工模式（如高管-外包团队）依然普遍。  
+3. **技术赋能新泰勒主义**：AI与数据分析使任务拆解更精细化（如Uber算法调度），但需规避「数字流水线」对人的异化。  
 4. **文化适配性**：  
-   • **制造业/服务业**：科学管理仍为主流（如特斯拉工厂）；  
-   • **创新行业**：需去标准化（如硅谷“扁平化+项目制”）。  
+   - **制造业/服务业**：科学管理仍为主流（如特斯拉工厂）；  
+   - **创新行业**：需去标准化（如硅谷「扁平化+项目制」）。  
 
 ---
 
-### **关联案例（下节预告）**  
-• **通用汽车（GM）**：泰勒主义极致代表，层级森严、分工固化，20世纪后期因僵化陷入危机。  
-• **丰田生产系统（TPS）**：打破泰勒模式，通过“持续改进（Kaizen）”让工人参与流程优化，实现效率与灵活性并存。  
+#### 总结  
+泰勒的科学管理理论是工业化时代的「效率圣经」，其任务拆解与标准化逻辑至今仍是工作设计的DNA。然而，知识经济与人性化诉求推动工作系统向「柔性科学管理」演进——**用数据优化流程，以文化释放人性**，成为未来组织竞争力的关键。
 
 ---
 
-### **总结**  
-泰勒的科学管理理论是工业化时代的“效率圣经”，其任务拆解与标准化逻辑至今仍是工作设计的DNA。然而，知识经济与人性化诉求推动工作系统向“柔性科学管理”演进——**用数据优化流程，以文化释放人性**，成为未来组织竞争力的关键。
-
-## Prompt
+### 附录：字幕
 
 下面提供 Coursera Business Foundations 系列课程的第三课 Managing Social and Human Capital 的视频 subtitle 及 slide，请用中文对该视频进行总结并提炼关键结论
 
